# moving_train_fire

./: .gitignore  README.md  environment.yml  pyproject.toml
configs/: constant_condition_decel_test.yaml  default.yaml  exp_cmp_concat_vit_b16_open_condition20_finetune_from_tunnel_random622_100ep.yaml  exp_cmp_concat_vit_b16_open_random20_finetune_from_tunnel_random622_100ep.yaml  exp_cmp_concat_vit_b16_tunnel_random622_to_open_full_100ep.yaml  exp_cmp_image_only_convnext_tiny_open_condition20_finetune_from_tunnel_random622_100ep.yaml  exp_cmp_image_only_convnext_tiny_open_random20_finetune_from_tunnel_random622_100ep.yaml  exp_cmp_image_only_convnext_tiny_tunnel_random622_to_open_full_100ep.yaml  exp_cmp_image_only_efficientnet_b0_open_condition20_finetune_from_tunnel_random622_100ep.yaml  exp_cmp_image_only_efficientnet_b0_open_random20_finetune_from_tunnel_random622_100ep.yaml  exp_cmp_image_only_efficientnet_b0_tunnel_random622_to_open_full_100ep.yaml  exp_cmp_image_only_mambaout_tiny_open_condition20_finetune_from_tunnel_random622_100ep.yaml  exp_cmp_image_only_mambaout_tiny_open_random20_finetune_from_tunnel_random622_100ep.yaml  exp_cmp_image_only_mambaout_tiny_tunnel_random622_to_open_full_100ep.yaml  exp_cmp_image_only_maxvit_tiny_open_condition20_finetune_from_tunnel_random622_100ep.yaml  exp_cmp_image_only_maxvit_tiny_open_random20_finetune_from_tunnel_random622_100ep.yaml  exp_cmp_image_only_maxvit_tiny_tunnel_random622_to_open_full_100ep.yaml  exp_cmp_image_only_pvt_v2_b2_open_condition20_finetune_from_tunnel_random622_100ep.yaml  tunnel_random_open_test.yaml  (+21 more)
(+14 files in other folders)
